--- a/no.html
+++ b/no.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Love with coding</title>
-	<link rel="stylesheet" href="css/no.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="images/sad.gif" type="image/jpg" sizes="20x20">
 </head>
 <body>
